--- a/thankyou.html
+++ b/thankyou.html
@@ -10,6 +10,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <link href="css/responsive.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 <link rel="shortcut icon" href="images/favicon.png" >
 <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -49,14 +51,17 @@
 <!--Info Box-->
 <div class="upper-column info-box">
     <div class="social-links-one">
-        <a href="https://play.google.com/store/search?q=Marami%20Infotech" style="margin-top: 0px;position: absolute;/* float: right; */margin-left: -43px;"><i class="fab fa-google-play"></i><b>G</b></a>
+        <a href="https://play.google.com/store/search?q=Marami%20Infotech" 
+        style="margin-top: 0px;position: absolute;/* float: right; */margin-left: -43px;">
+        <i class="fab fa-google-play"></i></a>
 
-        <a href="https://www.facebook.com/pages/category/Software/Marami-Infotech-Ltd-416411208503004/"><span class="fa fa-facebook-f"></span></a>
+        <a href="https://www.facebook.com/pages/category/Software/Marami-Infotech-Ltd-416411208503004/">
+            <span class="fab fa-facebook-f"></span></a>
 
-        <a href="https://twitter.com/MaramiMil/"><span class="fa fa-twitter"></span></a>
+        <a href="https://twitter.com/MaramiMil/"><span class="fab fa-twitter"></span></a>
 
-        <a href="https://www.instagram.com/marami_mil/"><span class="fa fa-instagram"></span></a>
-        <a href="https://www.linkedin.com/in/marami-infotech-limited-93996b182/"><span class="fa fa-linkedin"></span></a>
+        <a href="https://www.instagram.com/marami_mil/"><span class="fab fa-instagram"></span></a>
+        <a href="https://www.linkedin.com/in/marami-infotech-limited-93996b182/"><span class="fab fa-linkedin"></span></a>
     </div>
 </div>
                         
